Bug 306187 - Windows list icon does not show up in "Walk Through Desktop List"
Summary: Windows list icon does not show up in "Walk Through Desktop List"
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 4.9.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/108...
Keywords: regression
: 297709 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-03 08:22 UTC by Girish
Modified: 2013-02-25 12:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
Preview (23.21 KB, image/png)
2013-01-16 20:11 UTC, Martin Flöser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Girish 2012-09-03 08:22:46 UTC
After doing upgrade of kdebase-workspace from 4.8.4-3 to 4.9.0-1, my KDE stop listing open windows icons in "Walk Through Desktop List". Also, I saw alignment of desktop names are changed from "left align" to "center align". Though, I don't consider alignment change as bug.

I saw people having same issue while upgrading from 4.7 to 4.8 (Bug 297709).

Reproducible: Always

Steps to Reproduce:
1. First set Global Keyboard Shortcut for getting "Walk Through Desktop"
  1. Got to "Shortcuts and Gestures"=>"Global Keyboard Shortcuts"=>"Kwin"  in "System Settings'
  2. Set some shortcut key for "Walk Through Desktop". I set as Meta+Tab.
2. Open some applications on different desktops.
3. Then do use this shortcut keys to check that icons are not present in desktop list.
Actual Results:  
Open application icons are not present in desktop list.

Expected Results:  
Open application icons should be there in desktop list, representing which application running on which desktop.

Issue was not there in kdebase-workspace-4.8.4.
Issue is seen in kdebase-worksapce-4.9.0-1.
Comment 1 Girish 2012-09-07 06:32:03 UTC
Upgraded to kdebase-workspace(4.9.1-3).
Problem persists.
Comment 2 Martin Flöser 2012-09-07 06:40:19 UTC
*** Bug 297709 has been marked as a duplicate of this bug. ***
Comment 3 Martin Flöser 2012-09-07 06:41:08 UTC
I hope to find some time to implement it for 4.10
Comment 4 AstroFloyd 2012-11-28 12:12:28 UTC
(In reply to comment #3)
> I hope to find some time to implement it for 4.10

Yes please - it is extremely difficult to use virtual desktops this way, since they all look identical. I just upgraded from 4.7 to 4.9.3 and the problem is indeed still there. I skipped 4.8 since I thought it would be fixed in 4.9.  I'm considering downgrading to 4.7 again.
Comment 5 Thomas Lübking 2012-11-28 14:18:04 UTC
Note to self: shift + tab shortcut assignment is broken for this one as well...
Comment 6 Martin Flöser 2013-01-16 14:34:12 UTC
I spent a few hours today on the issue without any success. The problem is that we have to render multiple listview nested in each other with different models and is seems like QML doesn't like that.

After being totally frustrated with this I give up on trying to get the icons to the specific desktop. What I will try nevertheless is adding the icons for the currently selected desktop underneath the list of desktops.
Comment 7 AstroFloyd 2013-01-16 15:07:57 UTC
(In reply to comment #6)
> After being totally frustrated with this I give up on trying to get the icons to the specific desktop.
I'm sorry to hear that, but would also like to let you know that your effort is very much appreciated!
Comment 8 Martin Flöser 2013-01-16 20:11:43 UTC
Created attachment 76516 [details]
Preview

My pride has won over annoying QML details. It's not perfect yet. E.g. icons do not show up any more after using it once and as one can see the alignment needs improvements. But at least it's working :-)
Comment 9 pauloedgarcastro 2013-01-24 12:02:53 UTC
Just adding a +1 here.
After update from F16 to F17 the walk through desktops stopped bearing the small icons on each desktop as before.
Comment 10 Martin Flöser 2013-02-25 12:40:03 UTC
Git commit f183a0bec4bf644da9327cbbee96f74497cc19d4 by Martin Gräßlin.
Committed on 17/01/2013 at 08:53.
Pushed by graesslin into branch 'master'.

Add icons of selected desktop to Desktop TabBox

To support this feature the DesktopModel is turned into a tree model with
the desktops on the root level and the Client's at the next level.

In the view a VisualDataModel is used which kind of supports a tree model
by setting the root index. A list view is added underneath all the
desktops showing the icons of the windows on the desktop one switches to.
FIXED-IN: 4.11
REVIEW: 108445

M  +1    -1    kwin/tabbox/clientmodel.cpp
M  +15   -6    kwin/tabbox/declarative.cpp
M  +45   -13   kwin/tabbox/desktopmodel.cpp
M  +64   -3    kwin/tabbox/qml/desktop.qml

http://commits.kde.org/kde-workspace/f183a0bec4bf644da9327cbbee96f74497cc19d4