tabbox/declarative.cpp
@@ -64,15 +64,24 @@ QPixmap ImageProvider::requestPixmap(const QString &id, QSize *size, const QSize
     QStringList parts = id.split('/');
     const int row = parts.first().toInt(&ok);
     if (!ok) {
-        return QDeclarativeImageProvider::requestPixmap(id, size, requestedSize);
+        return QPixmap();
     }
-    const QModelIndex index = m_model->index(row, 0);
+    QModelIndex parentIndex;
+    const int parentRow = parts.at(1).toInt(&ok);
+    if (ok) {
+        // we have parent index
+        parentIndex = m_model->index(parentRow, 0);
+        if (!parentIndex.isValid()) {
+            return QPixmap();
+        }
+    }
+    const QModelIndex index = m_model->index(row, 0, parentIndex);
     if (!index.isValid()) {
-        return QDeclarativeImageProvider::requestPixmap(id, size, requestedSize);
+        return QPixmap();
     }
     TabBoxClient* client = static_cast< TabBoxClient* >(index.model()->data(index, ClientModel::ClientRole).value<void *>());
     if (!client) {
-        return QDeclarativeImageProvider::requestPixmap(id, size, requestedSize);
+        return QPixmap();
     }
 
     QSize s(32, 32);
@@ -92,9 +101,9 @@ QPixmap ImageProvider::requestPixmap(const QString &id, QSize *size, const QSize
     if (parts.size() > 2) {
         KIconEffect *effect = KIconLoader::global()->iconEffect();
         KIconLoader::States state = KIconLoader::DefaultState;
-        if (parts.at(2) == QLatin1String("selected")) {
+        if (parts.last() == QLatin1String("selected")) {
             state = KIconLoader::ActiveState;
-        } else if (parts.at(2) == QLatin1String("disabled")) {
+        } else if (parts.last() == QLatin1String("disabled")) {
             state = KIconLoader::DisabledState;
         }
         icon = effect->apply(icon, KIconLoader::Desktop, state);
